
tslib 1.19 - unreleased
================================
This release includes libts version 0.10.1 and the following changes:
* input-raw / ts_uinput: fix MT type A devices
* ts_calibrate: close framebuffer after validation. add timeout option -s for it


tslib 1.18 - released 2018-11-27
================================
This release includes libts version 0.10.0 and the following changes:
* support for screen-rotation in ts_calibrate and linear module
* add experimental module_raw input_evdev that needs libevdev
* new ts_calibrate --min_interval option to avoid inaccurate calibration
* add ts_calibrate --validate functionality to verify the calibration
* add ts_conf_get() and ts_conf_set() API
* improved CI

This release includes the following bugfixes:
* a5b39bf waveshare-raw: avoid possible overflow by casting a multiplication
* cd26eb5 ts_setup: fix a memory leak
* e73b6d1 input-raw: set 0 pressure if ABS_MT_TOUCH_MAJOR is 0


tslib 1.17 - released 2018-09-06
================================
This release includes libts version 0.9.2 and the following changes:
* improved backwards compatibility for ts_uinput and the library
* added support for cmake build system

This release includes the following bugfixes:
* f65e5eb median: fix pen_down propagation for read_mt()


tslib 1.16 - released 2018-04-19
================================
This release includes libts version 0.9.1 and the following changes:
* `module_raw tatung` is now disabled in the default build config. Users must
  `./configure --enable-tatung` if they rely on it.
* new `module_raw one-wire-ts-input` for FriedlyARM devices (disabled by
  default)
* simple tslib_version() function to get the version string

This release includes the following bugfixes:
* efcba6e ts_uinput: (fix for Android) write only one input_event at a time
* e63f33f invert: fix ts_read() iteration over multiple samples
* 932bb4f ts_uinput: fail for unsupported old kernel versions


tslib 1.15 - released 2018-01-11