@@ -49,8 +49,8 @@ on how to use it.
 <p>
 <b>Download tslib</b>
 <p>
-tslib only provides source archives. The latest release is version <b>1.18</b>
-including libts library version 0.10.0, released on the <b>27th of November 2018</b>.
+tslib only provides source archives. The latest release is version <b>1.19</b>
+including libts library version 0.10.1, released on the <b>24th of January 2019</b>.
 Get it from our <a href="https://github.com/kergoth/tslib/releases">release page</a>
 (<a href="https://gitlab.com/tslib/tslib/tags">mirror</a>).
 
